fix: sub-pixel gaps on specific resolutions, phone layout, chore: minor reformats

--- a/src/index.css
+++ b/src/index.css
@@ -127,20 +127,20 @@ main::after {
 }
 
 main::before {
-    top: 0;
+    top: -1px;
     background: linear-gradient(to bottom, var(--color-bg), transparent);
     margin-bottom: calc(-1 * var(--space-5));
 }
 
 main::after {
-    bottom: 0;
+    bottom: -1px;
     background: linear-gradient(to top, var(--color-bg), transparent);
     margin-top: calc(-1 * var(--space-5));
 }
 
 .container {
     max-width: var(--container-width);
-    height: 90%;
+    min-height: 100%;
     margin-inline: auto;
     padding-inline: var(--space-4);
     display: flex;
