--- a/src/pages/Projects.module.css
+++ b/src/pages/Projects.module.css
@@ -33,6 +33,6 @@
 
 @media (max-width: 640px) {
     .projects {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
     }
 }
